add dashboard api for admin
